--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-helmet": "^5.2.0",
+    "react-icons": "^3.10.0",
     "react-leaflet": "^2.6.3"
   },
   "devDependencies": {
