--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@turf/turf": "^5.1.6",
     "fuse.js": "^5.2.3",
     "gatsby": "^2.20.12",
+    "gatsby-plugin-manifest": "^2.4.1",
     "gatsby-plugin-react-helmet": "^3.2.1",
     "gatsby-plugin-react-leaflet": "2.0.12",
     "gatsby-plugin-resolve-src": "^2.0.0",
